--- a/criteria.bib
+++ b/criteria.bib
@@ -1,3 +1,138 @@
-@misc{DBLP:test,
-    search-key = {conf/ecir}
+@misc{CRITERIA:DBLP:airs,
+    search-keys = {conf/airs},
+    create-from = {DBLP:conf/airs},
+    acronym = {AIRS},
+    name = {Alliance of Information and Referral Systems}
+}
+@misc{CRITERIA:DBLP:chiir,
+    search-keys = {conf/chiir},
+    create-from = {DBLP:conf/chiir},
+    acronym = {CHIIR},
+    name = {ACM SIGIR Conference on Human Information Interaction and Retrieval}
+}
+@misc{CRITERIA:DBLP:cikm,
+    search-keys = {conf/cikm},
+    create-from = {DBLP:conf/cikm},
+    acronym = {CIKM},
+    name = {ACM International Conference on Information and Knowledge Management}
+}
+@misc{CRITERIA:DBLP:clef,
+    search-keys = {conf/clef},
+    create-from = {DBLP:conf/clef},
+    acronym = {CLEF},
+    name = {Cross-Language Education and Function}
+}
+@misc{CRITERIA:DBLP:desires,
+    search-keys = {conf/desires},
+    create-from = {DBLP:conf/desires},
+    acronym = {DESIRES},
+    name = {Design of Experimental Search and Information REtrieval Systems}
+}
+@misc{CRITERIA:DBLP:dir,
+    search-keys = {conf/dir},
+    create-from = {DBLP:conf/dir},
+    acronym = {DIR},
+    name = {Dutch-Belgian Workshop on Information Retrieval}
+}
+@misc{CRITERIA:DBLP:ecir,
+    search-keys = {conf/ecir},
+    create-from = {DBLP:conf/ecir},
+    acronym = {ECIR},
+    name = {European Conference on Information Retrieval}
+}
+@misc{CRITERIA:DBLP:fire,
+    search-keys = {conf/fire},
+    create-from = {DBLP:conf/fire},
+    acronym = {FIRE},
+    name = {Forum for Information Retrieval Evaluation}
+}
+@misc{CRITERIA:DBLP:ictir,
+    search-keys = {conf/ictir},
+    create-from = {DBLP:conf/ictir},
+    acronym = {ICTIR},
+    name = {ACM SIGIR International Conference on the Theory of Information Retrieval}
+}
+@misc{CRITERIA:DBLP:ipm,
+    search-keys = {conf/ipm},
+    create-from = {DBLP:conf/ipm},
+    acronym = {IPM},
+    name = {Information Processing and Management}
+}
+@misc{CRITERIA:DBLP:ntcir,
+    search-keys = {conf/ntcir},
+    create-from = {DBLP:conf/ntcir},
+    acronym = {NTCIR},
+    name = {NII Testbeds and Community for Information Access Research}
+}
+@misc{CRITERIA:DBLP:riao,
+    search-keys = {conf/riao, conf/oair},
+    create-from = {DBLP:conf/riao, DBLP:conf/oair},
+    acronym = {RIAO},
+    name = {Recherche d'Information Assist\'{e}e par Ordinateur}
+}
+@misc{CRITERIA:DBLP:sigir:conf,
+    search-keys = {conf/sigir},
+    create-from = {DBLP:conf/sigir},
+    acronym = {SIGIR},
+    name = {Special Interest Group on Information Retrieval Conference}
+}
+@misc{CRITERIA:DBLP:sigir:journals,
+    search-keys = {journals/sigir},
+    create-from = {DBLP:journals/sigir},
+    acronym = {SIGIR Forum},
+    name = {Special Interest Group on Information Retrieval Forum}
+}
+@misc{CRITERIA:DBLP:spire,
+    search-keys = {conf/spire},
+    create-from = {DBLP:conf/spire},
+    acronym = {SPIRE},
+    name = {International Symposium on String Processing and Information Retrieval}
+}
+@misc{CRITERIA:DBLP:tist,
+    search-keys = {conf/tist},
+    create-from = {DBLP:conf/tist},
+    acronym = {TIST},
+    name = {ACM Transactions on Intelligent Systems and Technology}
+}
+@misc{CRITERIA:DBLP:tois,
+    search-keys = {conf/tois},
+    create-from = {DBLP:conf/tois},
+    acronym = {TOIS},
+    name = {ACM Transactions on Information Systems}
+}
+@misc{CRITERIA:DBLP:tweb,
+    search-keys = {conf/tweb},
+    create-from = {DBLP:conf/tweb},
+    acronym = {TWEB},
+    name = {ACM Transactions on the Web}
+}
+@misc{CRITERIA:DBLP:tweb,
+    search-keys = {conf/tweb},
+    create-from = {DBLP:conf/tweb},
+    acronym = {TWEB},
+    name = {ACM Transactions on the Web}
+}
+@misc{CRITERIA:DBLP:trec,
+    search-keys = {conf/trec},
+    create-from = {DBLP:conf/trec},
+    acronym = {TREC},
+    name = {Text REtrieval Conference}
+}
+@misc{CRITERIA:DBLP:wsdm,
+    search-keys = {conf/wsdm},
+    create-from = {DBLP:conf/wsdm},
+    acronym = {WSDM},
+    name = {Conference on Web Search and Data Mining}
+}
+@misc{CRITERIA:DBLP:www,
+    search-keys = {conf/www},
+    create-from = {DBLP:conf/www},
+    acronym = {WWW},
+    name = {World Wide Web Conference}
+}
+@misc{CRITERIA:DBLP:www,
+    search-keys = {journals/www},
+    create-from = {DBLP:journals/www},
+    acronym = {WWWJ},
+    name = {World Wide Web Journal}
 }
