--- a/criteria.bib
+++ b/criteria.bib
@@ -53,8 +53,8 @@
     name = {ACM SIGIR International Conference on the Theory of Information Retrieval}
 }
 @misc{CRITERIA:DBLP:ipm,
-    search-keys = {conf/ipm},
-    create-from = {DBLP:conf/ipm},
+    search-keys = {journals/ipm},
+    create-from = {DBLP:journals/ipm},
     acronym = {IPM},
     name = {Information Processing and Management}
 }
@@ -67,16 +67,16 @@
 @misc{CRITERIA:DBLP:riao,
     search-keys = {conf/riao, conf/oair},
     create-from = {DBLP:conf/riao, DBLP:conf/oair},
-    acronym = {RIAO},
+    acronym = {RIAO/OAIR},
     name = {Recherche d'Information Assist\'{e}e par Ordinateur}
 }
-@misc{CRITERIA:DBLP:sigir:conf,
+@misc{CRITERIA:DBLP:sigirconf,
     search-keys = {conf/sigir},
     create-from = {DBLP:conf/sigir},
     acronym = {SIGIR},
     name = {Special Interest Group on Information Retrieval Conference}
 }
-@misc{CRITERIA:DBLP:sigir:journals,
+@misc{CRITERIA:DBLP:sigirjournals,
     search-keys = {journals/sigir},
     create-from = {DBLP:journals/sigir},
     acronym = {SIGIR Forum},
@@ -89,26 +89,20 @@
     name = {International Symposium on String Processing and Information Retrieval}
 }
 @misc{CRITERIA:DBLP:tist,
-    search-keys = {conf/tist},
-    create-from = {DBLP:conf/tist},
+    search-keys = {journals/tist},
+    create-from = {DBLP:journals/tist},
     acronym = {TIST},
     name = {ACM Transactions on Intelligent Systems and Technology}
 }
 @misc{CRITERIA:DBLP:tois,
-    search-keys = {conf/tois},
-    create-from = {DBLP:conf/tois},
+    search-keys = {journals/tois},
+    create-from = {DBLP:journals/tois},
     acronym = {TOIS},
     name = {ACM Transactions on Information Systems}
 }
 @misc{CRITERIA:DBLP:tweb,
-    search-keys = {conf/tweb},
-    create-from = {DBLP:conf/tweb},
-    acronym = {TWEB},
-    name = {ACM Transactions on the Web}
-}
-@misc{CRITERIA:DBLP:tweb,
-    search-keys = {conf/tweb},
-    create-from = {DBLP:conf/tweb},
+    search-keys = {journals/tweb},
+    create-from = {DBLP:journals/tweb},
     acronym = {TWEB},
     name = {ACM Transactions on the Web}
 }
@@ -124,13 +118,13 @@
     acronym = {WSDM},
     name = {Conference on Web Search and Data Mining}
 }
-@misc{CRITERIA:DBLP:www,
+@misc{CRITERIA:DBLP:wwwconf,
     search-keys = {conf/www},
     create-from = {DBLP:conf/www},
     acronym = {WWW},
     name = {World Wide Web Conference}
 }
-@misc{CRITERIA:DBLP:www,
+@misc{CRITERIA:DBLP:wwwjournals,
     search-keys = {journals/www},
     create-from = {DBLP:journals/www},
     acronym = {WWWJ},
