add HCIR as predecessor of CHIIR
https://github.com/ir-anthology/ir-anthology/issues/51

--- a/criteria.bib
+++ b/criteria.bib
@@ -6,8 +6,8 @@
 }
 @misc{CRITERIA:DBLP:chiir,
     search-keys = {conf/chiir},
-    create-from = {DBLP:conf/chiir},
-    acronym = {CHIIR},
+    create-from = {DBLP:conf/chiir, DBLP:conf/hcir},
+    acronym = {CHIIR/HCIR},
     name = {ACM SIGIR Conference on Human Information Interaction and Retrieval}
 }
 @misc{CRITERIA:DBLP:cikm,
