add jasist journal
https://github.com/ir-anthology/ir-anthology/issues/44

--- a/criteria.bib
+++ b/criteria.bib
@@ -58,6 +58,12 @@
     acronym = {IPM},
     name = {Information Processing and Management}
 }
+@misc{CRITERIA:DBLP:jasis,
+    search-keys = {journals/jasis},
+    create-from = {DBLP:journals/jasis},
+    acronym = {JASIST},
+    name = {Journal of the Association for Information Science and Technology}
+}
 @misc{CRITERIA:DBLP:ntcir,
     search-keys = {conf/ntcir},
     create-from = {DBLP:conf/ntcir},
