add missing search-key of hcir

--- a/criteria.bib
+++ b/criteria.bib
@@ -5,7 +5,7 @@
     name = {Alliance of Information and Referral Systems}
 }
 @misc{CRITERIA:DBLP:chiir,
-    search-keys = {conf/chiir},
+    search-keys = {conf/chiir, conf/hcir},
     create-from = {DBLP:conf/chiir, DBLP:conf/hcir},
     acronym = {CHIIR/HCIR},
     name = {ACM SIGIR Conference on Human Information Interaction and Retrieval}
