--- a/criteria.bib
+++ b/criteria.bib
@@ -58,6 +58,12 @@
     acronym = {IPM},
     name = {Information Processing and Management}
 }
+@misc{CRITERIA:DBLP:ir,
+    search-keys = {journals/ir},
+    create-from = {DBLP:journals/ir},
+    acronym = {IRJ},
+    name = {Information Retrieval Journal}
+}
 @misc{CRITERIA:DBLP:jasis,
     search-keys = {journals/jasis},
     create-from = {DBLP:journals/jasis},
