Add TISMIR journal
https://github.com/ir-anthology/ir-anthology/issues/39

--- a/criteria.bib
+++ b/criteria.bib
@@ -100,6 +100,12 @@
     acronym = {SPIRE},
     name = {International Symposium on String Processing and Information Retrieval}
 }
+@misc{CRITERIA:DBLP:tismir,
+    search-keys = {journals/tismir},
+    create-from = {DBLP:journals/tismir},
+    acronym = {TISMIR},
+    name = {Transactions of the International Society for Music Information Retrieval}
+}
 @misc{CRITERIA:DBLP:tist,
     search-keys = {journals/tist},
     create-from = {DBLP:journals/tist},
