Add AIRWeb conference
https://github.com/ir-anthology/ir-anthology/issues/38

--- a/criteria.bib
+++ b/criteria.bib
@@ -4,6 +4,12 @@
     acronym = {AIRS},
     name = {Alliance of Information and Referral Systems}
 }
+@misc{CRITERIA:DBLP:airweb,
+    search-keys = {conf/airweb},
+    create-from = {DBLP:conf/airweb},
+    acronym = {AIRWeb}.
+    name = {Adversarial Information Retrieval on the Web}
+}
 @misc{CRITERIA:DBLP:chiir,
     search-keys = {conf/chiir, conf/hcir},
     create-from = {DBLP:conf/chiir, DBLP:conf/hcir},
