Add IRFC conference
https://github.com/ir-anthology/ir-anthology/issues/37

--- a/criteria.bib
+++ b/criteria.bib
@@ -70,6 +70,12 @@
     acronym = {IRJ},
     name = {Information Retrieval Journal}
 }
+@misc{CRITERIA:DBLP:irfc,
+    search-keys = {conf/irfc},
+    create-from = {DBLP:conf/irfc},
+    acronym = {IRFC},
+    name = {Information Retrieval Facility Conference}
+}
 @misc{CRITERIA:DBLP:jasis,
     search-keys = {journals/jasis},
     create-from = {DBLP:journals/jasis},
