Add IJIRR journal
https://github.com/ir-anthology/ir-anthology/issues/36

--- a/criteria.bib
+++ b/criteria.bib
@@ -58,6 +58,12 @@
     acronym = {ICTIR},
     name = {ACM SIGIR International Conference on the Theory of Information Retrieval}
 }
+@misc{CRITERIA:DBLP:ijirr,
+    search-keys = {journals/ijirr},
+    create-from = {DBLP:journals/ijirr},
+    acronym = {IJIRR},
+    name = {International Journal of Information Retrieval Research}
+}
 @misc{CRITERIA:DBLP:ipm,
     search-keys = {journals/ipm},
     create-from = {DBLP:journals/ipm},
