Add MIR (ICMR) conference
https://github.com/ir-anthology/ir-anthology/issues/34

--- a/criteria.bib
+++ b/criteria.bib
@@ -52,6 +52,12 @@
     acronym = {FIRE},
     name = {Forum for Information Retrieval Evaluation}
 }
+@misc{CRITERIA:DBLP:mir,
+    search-keys = {conf/mir},
+    create-from = {DBLP:conf/mir},
+    acronym = {ICMR},
+    name = {International Conference on Multimedia Retrieval}
+}
 @misc{CRITERIA:DBLP:ictir,
     search-keys = {conf/ictir},
     create-from = {DBLP:conf/ictir},
