Add BIR workshop
https://github.com/ir-anthology/ir-anthology/issues/33

--- a/criteria.bib
+++ b/criteria.bib
@@ -10,6 +10,12 @@
     acronym = {AIRWeb}.
     name = {Adversarial Information Retrieval on the Web}
 }
+@misc{CRITERIA:DBLP:birws,
+    search-keys = {conf/birws},
+    create-from = {DBLP:conf/birws},
+    acronym = {BIR},
+    name = {International Workshop on Bibliometric-enhanced Information Retrieval}
+}
 @misc{CRITERIA:DBLP:chiir,
     search-keys = {conf/chiir, conf/hcir},
     create-from = {DBLP:conf/chiir, DBLP:conf/hcir},
