Add IIR workshop
https://github.com/ir-anthology/ir-anthology/issues/32

--- a/criteria.bib
+++ b/criteria.bib
@@ -70,6 +70,12 @@
     acronym = {ICTIR},
     name = {ACM SIGIR International Conference on the Theory of Information Retrieval}
 }
+@misc{CRITERIA:DBLP:iir,
+    search-keys = {conf/iir},
+    create-from = {DBLP:conf/iir},
+    acronym = {IIR},
+    name = {Italian Information Retrieval Workshop}
+}
 @misc{CRITERIA:DBLP:ijirr,
     search-keys = {journals/ijirr},
     create-from = {DBLP:journals/ijirr},
