--- a/criteria.bib
+++ b/criteria.bib
@@ -82,6 +82,12 @@
     acronym = {IJIRR},
     name = {International Journal of Information Retrieval Research}
 }
+@misc{CRITERIA:DBLP:ijmir,
+    search-keys = {journals/ijmir},
+    create-from = {DBLP:journals/ijmir},
+    acronym = {IJMIR},
+    name = {International Journal of Multimedia Information Retrieval}
+}
 @misc{CRITERIA:DBLP:ipm,
     search-keys = {journals/ipm},
     create-from = {DBLP:journals/ipm},
