Add GIR conference
https://github.com/ir-anthology/ir-anthology/issues/30

--- a/criteria.bib
+++ b/criteria.bib
@@ -58,6 +58,12 @@
     acronym = {FIRE},
     name = {Forum for Information Retrieval Evaluation}
 }
+@misc{CRITERIA:DBLP:gir,
+    search-keys = {conf/gir},
+    create-from = {DBLP:conf/gir},
+    acronym = {GIR},
+    name = {Workshop on Geographic Information Retrieval}
+}
 @misc{CRITERIA:DBLP:mir,
     search-keys = {conf/mir},
     create-from = {DBLP:conf/mir},
