Add ISMIR conference
https://github.com/ir-anthology/ir-anthology/issues/29

--- a/criteria.bib
+++ b/criteria.bib
@@ -112,6 +112,12 @@
     acronym = {IRFC},
     name = {Information Retrieval Facility Conference}
 }
+@misc{CRITERIA:DBLP:ismir,
+    search-keys = {conf/ismir},
+    create-from = {DBLP:conf/ismir},
+    acronym = {ISMIR},
+    name = {International Society for Music Information Retrieval Conference}
+}
 @misc{CRITERIA:DBLP:jasis,
     search-keys = {journals/jasis},
     create-from = {DBLP:journals/jasis},
