--- a/criteria.bib
+++ b/criteria.bib
@@ -34,6 +34,12 @@
     acronym = {CLEF},
     name = {Cross-Language Education and Function}
 }
+@misc{CRITERIA:DBLP:coria,
+    search-keys = {conf/coria},
+    create-from = {DBLP:conf/coria},
+    acronym = {CORIA},
+    name = {Conf{\'{e}}rence en Recherche d'Informations et Applications}
+}
 @misc{CRITERIA:DBLP:desires,
     search-keys = {conf/desires},
     create-from = {DBLP:conf/desires},
