Add CERI conference https://github.com/ir-anthology/ir-anthology/issues/60

--- a/criteria.bib
+++ b/criteria.bib
@@ -16,6 +16,12 @@
     acronym = {BIR},
     name = {International Workshop on Bibliometric-enhanced Information Retrieval}
 }
+@misc{CRITERIA:DBLP:ceri,
+    search-keys = {conf/ceri},
+    create-from = {DBLP:conf/ceri},
+    acronym = {CERI},
+    name = {Spanish Conference on Information Retrieval}
+}
 @misc{CRITERIA:DBLP:chiir,
     search-keys = {conf/chiir, conf/hcir},
     create-from = {DBLP:conf/chiir, DBLP:conf/hcir},
