Add ADCS conference https://github.com/ir-anthology/ir-anthology/issues/66

--- a/criteria.bib
+++ b/criteria.bib
@@ -1,3 +1,9 @@
+@misc{CRITERIA:DBLP:adcs,
+    search-keys = {conf/adcs},
+    create-from = {DBLP:conf/adcs},
+    acronym = {ADCS},
+    name = {Australasian Document Computing Symposium}
+}
 @misc{CRITERIA:DBLP:airs,
     search-keys = {conf/airs},
     create-from = {DBLP:conf/airs},
