Add IIiX as another of CHIIR's precursors https://github.com/ir-anthology/ir-anthology/issues/67

--- a/criteria.bib
+++ b/criteria.bib
@@ -29,8 +29,8 @@
     name = {Spanish Conference on Information Retrieval}
 }
 @misc{CRITERIA:DBLP:chiir,
-    search-keys = {conf/chiir, conf/hcir},
-    create-from = {DBLP:conf/chiir, DBLP:conf/hcir},
+    search-keys = {conf/chiir, conf/hcir, conf/iiix},
+    create-from = {DBLP:conf/chiir, DBLP:conf/hcir, DBLP:conf/iiix},
     acronym = {CHIIR/HCIR},
     name = {ACM SIGIR Conference on Human Information Interaction and Retrieval}
 }
