Add FnTIR to journals https://github.com/ir-anthology/ir-anthology/issues/69

--- a/criteria.bib
+++ b/criteria.bib
@@ -76,6 +76,12 @@
     acronym = {FIRE},
     name = {Forum for Information Retrieval Evaluation}
 }
+@misc{CRITERIA:DBLP:fntir,
+    search-keys = {conf/fntir},
+    create-from = {DBLP:conf/fntir},
+    acronym = {FnT IR},
+    name = {Foundations and Trends in Information Retrieval}
+}
 @misc{CRITERIA:DBLP:gir,
     search-keys = {conf/gir},
     create-from = {DBLP:conf/gir},
