Add CCIR to conferences https://github.com/ir-anthology/ir-anthology/issues/70

--- a/criteria.bib
+++ b/criteria.bib
@@ -34,6 +34,12 @@
     acronym = {CHIIR/HCIR},
     name = {ACM SIGIR Conference on Human Information Interaction and Retrieval}
 }
+@misc{CRITERIA:DBLP:ccir,
+    search-keys = {conf/ccir},
+    create-from = {DBLP:conf/ccir},
+    acronym = {CCIR},
+    name = {China Conference on Information Retrieval}
+}
 @misc{CRITERIA:DBLP:cikm,
     search-keys = {conf/cikm},
     create-from = {DBLP:conf/cikm},
