--- a/criteria.bib
+++ b/criteria.bib
@@ -83,8 +83,8 @@
     name = {Forum for Information Retrieval Evaluation}
 }
 @misc{CRITERIA:DBLP:fntir,
-    search-keys = {conf/fntir},
-    create-from = {DBLP:conf/fntir},
+    search-keys = {journals/fntir},
+    create-from = {DBLP:journals/fntir},
     acronym = {FnT IR},
     name = {Foundations and Trends in Information Retrieval}
 }
