--- a/criteria.bib
+++ b/criteria.bib
@@ -66,7 +66,7 @@
 }
 @misc{CRITERIA:DBLP:dir,
     search-keys = {conf/dir},
-    create-from = {DBLP:conf/dir},
+    create-from = {DBLP:conf/dir, MANUAL:conf/dir},
     acronym = {DIR},
     name = {Dutch-Belgian Workshop on Information Retrieval}
 }
