add language tag to all conferences/journals https://github.com/ir-anthology/ir-anthology/issues/58

--- a/criteria.bib
+++ b/criteria.bib
@@ -2,233 +2,272 @@
     search-keys = {conf/adcs},
     create-from = {DBLP:conf/adcs},
     acronym = {ADCS},
-    name = {Australasian Document Computing Symposium}
+    name = {Australasian Document Computing Symposium},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:airs,
     search-keys = {conf/airs},
     create-from = {DBLP:conf/airs},
     acronym = {AIRS},
-    name = {Alliance of Information and Referral Systems}
+    name = {Alliance of Information and Referral Systems},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:airweb,
     search-keys = {conf/airweb},
     create-from = {DBLP:conf/airweb},
-    acronym = {AIRWeb}.
-    name = {Adversarial Information Retrieval on the Web}
+    acronym = {AIRWeb},
+    name = {Adversarial Information Retrieval on the Web},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:birws,
     search-keys = {conf/birws},
     create-from = {DBLP:conf/birws},
     acronym = {BIR},
-    name = {International Workshop on Bibliometric-enhanced Information Retrieval}
+    name = {International Workshop on Bibliometric-enhanced Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ceri,
     search-keys = {conf/ceri},
     create-from = {DBLP:conf/ceri},
     acronym = {CERI},
-    name = {Spanish Conference on Information Retrieval}
+    name = {Spanish Conference on Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:chiir,
     search-keys = {conf/chiir, conf/hcir, conf/iiix},
     create-from = {DBLP:conf/chiir, DBLP:conf/hcir, DBLP:conf/iiix},
     acronym = {CHIIR/HCIR},
-    name = {ACM SIGIR Conference on Human Information Interaction and Retrieval}
+    name = {ACM SIGIR Conference on Human Information Interaction and Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ccir,
     search-keys = {conf/ccir},
     create-from = {DBLP:conf/ccir},
     acronym = {CCIR},
-    name = {China Conference on Information Retrieval}
+    name = {China Conference on Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:cikm,
     search-keys = {conf/cikm},
     create-from = {DBLP:conf/cikm},
     acronym = {CIKM},
-    name = {ACM International Conference on Information and Knowledge Management}
+    name = {ACM International Conference on Information and Knowledge Management},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:clef,
     search-keys = {conf/clef},
     create-from = {DBLP:conf/clef},
     acronym = {CLEF},
-    name = {Cross-Language Education and Function}
+    name = {Cross-Language Education and Function},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:coria,
     search-keys = {conf/coria},
     create-from = {DBLP:conf/coria},
     acronym = {CORIA},
-    name = {Conf{\'{e}}rence en Recherche d'Informations et Applications}
+    name = {Conf{\'{e}}rence en Recherche d'Informations et Applications},
+    language = {French}
 }
 @misc{CRITERIA:DBLP:desires,
     search-keys = {conf/desires},
     create-from = {DBLP:conf/desires},
     acronym = {DESIRES},
-    name = {Design of Experimental Search and Information REtrieval Systems}
+    name = {Design of Experimental Search and Information REtrieval Systems},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:dir,
     search-keys = {conf/dir},
     create-from = {DBLP:conf/dir, MANUAL:conf/dir},
     acronym = {DIR},
-    name = {Dutch-Belgian Workshop on Information Retrieval}
+    name = {Dutch-Belgian Workshop on Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ecir,
     search-keys = {conf/ecir},
     create-from = {DBLP:conf/ecir},
     acronym = {ECIR},
-    name = {European Conference on Information Retrieval}
+    name = {European Conference on Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:fire,
     search-keys = {conf/fire},
     create-from = {DBLP:conf/fire},
     acronym = {FIRE},
-    name = {Forum for Information Retrieval Evaluation}
+    name = {Forum for Information Retrieval Evaluation},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:fntir,
     search-keys = {journals/fntir},
     create-from = {DBLP:journals/fntir},
     acronym = {FnT IR},
-    name = {Foundations and Trends in Information Retrieval}
+    name = {Foundations and Trends in Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:gir,
     search-keys = {conf/gir},
     create-from = {DBLP:conf/gir},
     acronym = {GIR},
-    name = {Workshop on Geographic Information Retrieval}
+    name = {Workshop on Geographic Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:mir,
     search-keys = {conf/mir},
     create-from = {DBLP:conf/mir},
     acronym = {ICMR},
-    name = {International Conference on Multimedia Retrieval}
+    name = {International Conference on Multimedia Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ictir,
     search-keys = {conf/ictir},
     create-from = {DBLP:conf/ictir},
     acronym = {ICTIR},
-    name = {ACM SIGIR International Conference on the Theory of Information Retrieval}
+    name = {ACM SIGIR International Conference on the Theory of Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:iir,
     search-keys = {conf/iir},
     create-from = {DBLP:conf/iir},
     acronym = {IIR},
-    name = {Italian Information Retrieval Workshop}
+    name = {Italian Information Retrieval Workshop},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ijirr,
     search-keys = {journals/ijirr},
     create-from = {DBLP:journals/ijirr},
     acronym = {IJIRR},
-    name = {International Journal of Information Retrieval Research}
+    name = {International Journal of Information Retrieval Research},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ijmir,
     search-keys = {journals/ijmir},
     create-from = {DBLP:journals/ijmir},
     acronym = {IJMIR},
-    name = {International Journal of Multimedia Information Retrieval}
+    name = {International Journal of Multimedia Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ipm,
     search-keys = {journals/ipm},
     create-from = {DBLP:journals/ipm},
     acronym = {IPM},
-    name = {Information Processing and Management}
+    name = {Information Processing and Management},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ir,
     search-keys = {journals/ir},
     create-from = {DBLP:journals/ir},
     acronym = {IRJ},
-    name = {Information Retrieval Journal}
+    name = {Information Retrieval Journal},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:irfc,
     search-keys = {conf/irfc},
     create-from = {DBLP:conf/irfc},
     acronym = {IRFC},
-    name = {Information Retrieval Facility Conference}
+    name = {Information Retrieval Facility Conference},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ismir,
     search-keys = {conf/ismir},
     create-from = {DBLP:conf/ismir},
     acronym = {ISMIR},
-    name = {International Society for Music Information Retrieval Conference}
+    name = {International Society for Music Information Retrieval Conference},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:jasis,
     search-keys = {journals/jasis},
     create-from = {DBLP:journals/jasis},
     acronym = {JASIST},
-    name = {Journal of the Association for Information Science and Technology}
+    name = {Journal of the Association for Information Science and Technology},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:ntcir,
     search-keys = {conf/ntcir},
     create-from = {DBLP:conf/ntcir},
     acronym = {NTCIR},
-    name = {NII Testbeds and Community for Information Access Research}
+    name = {NII Testbeds and Community for Information Access Research},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:riao,
     search-keys = {conf/riao, conf/oair},
     create-from = {DBLP:conf/riao, DBLP:conf/oair},
     acronym = {RIAO/OAIR},
-    name = {Recherche d'Information Assist\'{e}e par Ordinateur}
+    name = {Recherche d'Information Assist\'{e}e par Ordinateur},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:sigirconf,
     search-keys = {conf/sigir},
     create-from = {DBLP:conf/sigir},
     acronym = {SIGIR},
-    name = {Special Interest Group on Information Retrieval Conference}
+    name = {Special Interest Group on Information Retrieval Conference},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:sigirjournals,
     search-keys = {journals/sigir},
     create-from = {DBLP:journals/sigir},
     acronym = {SIGIR Forum},
-    name = {Special Interest Group on Information Retrieval Forum}
+    name = {Special Interest Group on Information Retrieval Forum},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:spire,
     search-keys = {conf/spire},
     create-from = {DBLP:conf/spire},
     acronym = {SPIRE},
-    name = {International Symposium on String Processing and Information Retrieval}
+    name = {International Symposium on String Processing and Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:tismir,
     search-keys = {journals/tismir},
     create-from = {DBLP:journals/tismir},
     acronym = {TISMIR},
-    name = {Transactions of the International Society for Music Information Retrieval}
+    name = {Transactions of the International Society for Music Information Retrieval},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:tist,
     search-keys = {journals/tist},
     create-from = {DBLP:journals/tist},
     acronym = {TIST},
-    name = {ACM Transactions on Intelligent Systems and Technology}
+    name = {ACM Transactions on Intelligent Systems and Technology},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:tois,
     search-keys = {journals/tois},
     create-from = {DBLP:journals/tois},
     acronym = {TOIS},
-    name = {ACM Transactions on Information Systems}
+    name = {ACM Transactions on Information Systems},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:tweb,
     search-keys = {journals/tweb},
     create-from = {DBLP:journals/tweb},
     acronym = {TWEB},
-    name = {ACM Transactions on the Web}
+    name = {ACM Transactions on the Web},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:trec,
     search-keys = {conf/trec},
     create-from = {DBLP:conf/trec},
     acronym = {TREC},
-    name = {Text REtrieval Conference}
+    name = {Text REtrieval Conference},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:wsdm,
     search-keys = {conf/wsdm},
     create-from = {DBLP:conf/wsdm},
     acronym = {WSDM},
-    name = {Conference on Web Search and Data Mining}
+    name = {Conference on Web Search and Data Mining},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:wwwconf,
     search-keys = {conf/www},
     create-from = {DBLP:conf/www},
     acronym = {WWW},
-    name = {World Wide Web Conference}
+    name = {World Wide Web Conference},
+    language = {English}
 }
 @misc{CRITERIA:DBLP:wwwjournals,
     search-keys = {journals/www},
     create-from = {DBLP:journals/www},
     acronym = {WWWJ},
-    name = {World Wide Web Journal}
+    name = {World Wide Web Journal},
+    language = {English}
 }
