add civr https://github.com/ir-anthology/ir-anthology/issues/48

--- a/criteria.bib
+++ b/criteria.bib
@@ -54,6 +54,13 @@
     name = {ACM International Conference on Information and Knowledge Management},
     language = {English}
 }
+@misc{CRITERIA:DBLP:civr,
+    search-keys = {conf/civr},
+    create-from = {DBLP:conf/civr},
+    acronym = {CIVR},
+    name = {ACM International Conference on Image and Video Retrieval},
+    language = {English}
+}
 @misc{CRITERIA:DBLP:clef,
     search-keys = {conf/clef},
     create-from = {DBLP:conf/clef},
