fix typo in fntir -> ftir https://github.com/ir-anthology/ir-anthology/issues/69

--- a/criteria.bib
+++ b/criteria.bib
@@ -103,9 +103,9 @@
     name = {Forum for Information Retrieval Evaluation},
     language = {English}
 }
-@misc{CRITERIA:DBLP:fntir,
-    search-keys = {journals/fntir},
-    create-from = {DBLP:journals/fntir},
+@misc{CRITERIA:DBLP:ftir,
+    search-keys = {journals/ftir},
+    create-from = {DBLP:journals/ftir},
     acronym = {FnT IR},
     name = {Foundations and Trends in Information Retrieval},
     language = {English}
