add fdia https://github.com/ir-anthology/ir-anthology/issues/75

--- a/criteria.bib
+++ b/criteria.bib
@@ -96,6 +96,12 @@
     name = {European Conference on Information Retrieval},
     language = {English}
 }
+@misc{CRITERIA:DBLP:fdia,
+    search-keys = {conf/fdia},
+    create-from = {DBLP:conf/fdia},
+    name = {BCS-IRSG Symposium on Future Directions in Information Access},
+    language = {English}
+}
 @misc{CRITERIA:DBLP:fire,
     search-keys = {conf/fire},
     create-from = {DBLP:conf/fire},
