add missing acronym for FDIA

--- a/criteria.bib
+++ b/criteria.bib
@@ -99,6 +99,7 @@
 @misc{CRITERIA:DBLP:fdia,
     search-keys = {conf/fdia},
     create-from = {DBLP:conf/fdia},
+    acronym = {FDIA},
     name = {BCS-IRSG Symposium on Future Directions in Information Access},
     language = {English}
 }
