added kluwer series to criteria, rebuilt anthology

--- a/criteria.bib
+++ b/criteria.bib
@@ -285,3 +285,10 @@
     name = {World Wide Web Journal},
     language = {English}
 }
+@misc{CRITERIA:DBLP:irsseries,
+    search-keys = {series/irs},
+    create-from = {DBLP:series/irs},
+    acronym = {IRS-series},
+    name = {Kluwer Information Retrieval Series},
+    language = {English}
+}
