added synthesis icr series

--- a/criteria.bib
+++ b/criteria.bib
@@ -292,3 +292,10 @@
     name = {Kluwer Information Retrieval Series},
     language = {English}
 }
+@misc{CRITERIA:DBLP:synthesis,
+    search-keys = {series/synthesis},
+    create-from = {DBLP:series/synthesis},
+    acronym = {Synth-ICR},
+    name = {Synthesis Lectures on Information Concepts, Retrieval, and Services},
+    language = {English}
+}
