finding pdfs is running on dummy data

--- a/scripts/find_pdfs.ipynb
+++ b/scripts/find_pdfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "06c88c97",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "6ecdc13e",
    "metadata": {},
    "outputs": [],
@@ -35,23 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "f3a8832e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "found_txt = open(\"./found_pfs.txt\", \"w\")\n",
-    "not_found_txt = open(\"./not_found_pfs.txt\", \"w\")\n",
-    "no_doi=open(\"./no_doi.txt\",\"w\")\n",
     "ceph_path=\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/wlgc/papers-by-doi/\"\n",
     "wlgc_new=\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/new_structure/\"\n",
     "new_bibs_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/new_bibs_dirs.json\",\"w\")\n",
-    "new_bibs_dirs={}"
+    "found_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/found.json\",\"w\")\n",
+    "not_found_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/not_found.json\",\"w\")\n",
+    "no_doi_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/no_doi.json\",\"w\")\n",
+    "new_bibs_dirs={}\n",
+    "found_pdf={}\n",
+    "not_found={}\n",
+    "no_doi={}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "eaf46a61",
    "metadata": {},
    "outputs": [
@@ -59,54 +62,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 621/621 [00:28<00:00, 21.92it/s]\n"
+      "100%|█████████████████████████████████████████| 621/621 [00:18<00:00, 34.09it/s]\n"
      ]
     }
    ],
    "source": [
     "for bib_name, bib_entry in tqdm(bib_database.entries_dict.items()):\n",
+    "        found=0\n",
     "        try:\n",
     "            doi = bib_entry[\"doi\"]\n",
-    "            #print(\"doi\",doi)\n",
     "        except:\n",
-    "            #print(bib_name+\" has no doi\")\n",
-    "            no_doi.write(bib_name+\" \"+str(bib_entry)+\"\\n\")\n",
+    "            no_doi[bib_name]=bib_entry\n",
     "            doi = \"0/0\"\n",
     "        \n",
-    "        #print(\"doi\",doi)\n",
     "        doi_url = unquote(doi)\n",
     "        doi_parts = doi_url.split(\"/\")\n",
     "        doi_prefix = doi_parts[0]\n",
     "        doi_suffix = doi_parts[1]\n",
     "\n",
     "        if doi_prefix==\"0\":\n",
-    "            #print(\"doi with prefix=0 \", doi)\n",
     "            continue\n",
     "    \n",
     "        else:\n",
     "            for pdf in os.listdir(ceph_path + doi_prefix):\n",
     "                pdf_url = unquote(pdf)\n",
-    "                #print(\"pdf_url: \",pdf_url[:-4])\n",
-    "                #print(\"doi_url: \",doi_suffix)\n",
-    "                \n",
+    "\n",
     "                if pdf_url[:-4] == doi_suffix:\n",
-    "                    #print(\"hey\")\n",
-    "                    # pdf exists\n",
-    "                    #found_txt.write(\"yo\")\n",
-    "                    \n",
-    "                    #TODO: Why is this writing to text not working ? \n",
-    "                    \n",
-    "                    found_txt.write(\n",
-    "                        \"for \" +\n",
-    "                        doi_url +\n",
-    "                        \" exists \" +\n",
-    "                        pdf +\n",
-    "                        \" in \" +\n",
-    "                        ceph_path +\n",
-    "                        doi_prefix + \" and renamed to \"+ bib_name + \".pdf\"+\"\\n\")\n",
-    "                    # rename with bib_name\n",
-    "                    #os.rename(ceph_path + doi_prefix + \"/\" +pdf, bib_name+\".pdf\")\n",
-    "                    \n",
+    "\n",
     "                    #move to new folder /conference/year/bib_name\n",
     "                    source_id=bib_entry[\"sourceid\"]\n",
     "                    conference=source_id.split(\"/\")[1]\n",
@@ -121,11 +103,9 @@
     "                        os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
     "                    \n",
     "                    new_bibs_dirs[bib_name]=wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"\n",
+    "                    found_pdf[bib_name]=[doi_url,ceph_path + doi_prefix + \"/\" + pdf]\n",
     "                    \n",
     "                    found = 1\n",
-    "            \n",
-    "            #TODO: CONTINUE HERE ! WHAT HAPPENS IF PDF NOT FOUND ? \n",
-    "            #DOES IT EVEN GO HERE ? DO SOME PRINT DEBUGGING \n",
     "\n",
     "            if found == 0:\n",
     "                # pdf not found\n",
@@ -136,14 +116,12 @@
     "                for direct in alldirs:\n",
     "                    for pdf in os.listdir(direct):\n",
     "                        if pdf.endswith(\".pdf\"):\n",
-    "\n",
+    "                            \n",
     "                            pdf_url = unquote(pdf)\n",
-    "\n",
-    "                            if pdf_url[:-4] == doi_suffix: #CHANGE THIS WITH suffix THING\n",
+    "                            \n",
+    "                            if pdf_url[:-4] == doi_suffix: \n",
     "                                # pdf exists\n",
-    "\n",
-    "                                found_txt.write(\n",
-    "                                    \"for \" + doi_url + \" exists\" + pdf + \" in \" + direct+\"\\n\")\n",
+    "                                \n",
     "                                os.rename(direct + pdf, bib_name) \n",
     "                                \n",
     "                                try:\n",
@@ -151,40 +129,62 @@
     "                                except:\n",
     "                                    os.makedirs(wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\")\n",
     "                                    os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
-    "                    \n",
-    "                                #INCLUDE NEW DIRS WITH DATE ETC\n",
-    "                                # write to a file that found with path\n",
-    "                                # rename with bib_name\n",
+    "                                \n",
+    "                                found_pdf[bib_name]=[doi_url,ceph_path + doi_prefix + \"/\" + pdf]\n",
     "                                new_bibs_dirs[bib_name]=wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"\n",
     "                                \n",
     "                                found = 1\n",
     "\n",
     "                        if found == 0:\n",
-    "                            # pdf not found\n",
-    "                            # append to file with unfound pdfs\n",
-    "                            not_found_txt.write(\n",
-    "                                \"for \" + doi_url + \" exists no pdf in ceph\"+\"\\n\")\n",
+    "                            not_found[bib_name]=\"not found\"\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "a7518c58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found  433\n",
+      "not found  185\n",
+      "no doi  3\n",
+      "new bib dirs  433\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"found \",len(found_pdf))\n",
+    "print(\"not found \",len(not_found))\n",
+    "print(\"no doi \",len(no_doi))\n",
+    "print(\"new bib dirs \",len(new_bibs_dirs))\n",
     "json.dump(new_bibs_dirs,new_bibs_json,indent=4, separators=(',', ': '))\n",
+    "json.dump(found_pdf,found_json,indent=4, separators=(',', ': '))\n",
+    "json.dump(not_found,not_found_json,indent=4, separators=(',', ': '))\n",
+    "json.dump(no_doi,no_doi_json,indent=4, separators=(',', ': '))\n",
     "bibtex_file.close()\n",
-    "found_txt.close()\n",
-    "not_found_txt.close()\n",
-    "new_bibs_json.close()"
+    "new_bibs_json.close()\n",
+    "no_doi_json.close()\n",
+    "not_found_json.close()\n",
+    "found_json.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "68df153c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104f0e08",
    "metadata": {},
    "outputs": [],
    "source": []
